# hello-again-vala

./: AUTHORS  CMakeLists.txt  COPYING
data/: com.github.Twister1996.hello-again-vala.appdata.xml  com.github.Twister1996.hello-again-vala.desktop  com.github.Twister1996.hello-vala-again.desktop
debian/: changelog  control  copyright
po/: com.github.Twister1996.hello-again-vala.pot
src/: hello-again.vala
